added form element to set the color of links and the islandora solr search button

--- a/css/grinnell.css
+++ b/css/grinnell.css
@@ -327,13 +327,14 @@ a.grinnell-home
   border: 0px;
   
   background-color: #cd2b26;
-  background: url('../images/magnifier.png') 0px 0px no-repeat,  -webkit-gradient(linear, left top, left bottom, from(#cd2b26), to(#7c0505)); /* Saf4+, Chrome */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,  -webkit-linear-gradient(top, #cd2b26, #7c0505); /* Chrome 10+, Saf5.1+, iOS 5+ */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,     -moz-linear-gradient(top, #cd2b26, #7c0505); /* FF3.6 */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,      -ms-linear-gradient(top, #cd2b26, #7c0505); /* IE10 */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,       -o-linear-gradient(top, #cd2b26, #7c0505); /* Opera 11.10+ */
+  background: url('../images/magnifier-gradient.png') 0px 0px no-repeat #cd2b26;
+/*  background: url('../images/magnifier.png') 0px 0px no-repeat,  -webkit-gradient(linear, left top, left bottom, from(#cd2b26), to(#7c0505));  Saf4+, Chrome 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,  -webkit-linear-gradient(top, #cd2b26, #7c0505);  Chrome 10+, Saf5.1+, iOS 5+ 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,     -moz-linear-gradient(top, #cd2b26, #7c0505);  FF3.6 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,      -ms-linear-gradient(top, #cd2b26, #7c0505);  IE10 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,       -o-linear-gradient(top, #cd2b26, #7c0505);  Opera 11.10+ 
   background: url('../images/magnifier.png') 0px 0px no-repeat,          linear-gradient(to bottom, #cd2b26, #7c0505);
-  
+  */
   /*  http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement */
   text-indent: 110%;
   white-space: nowrap;
@@ -343,12 +344,13 @@ a.grinnell-home
 #navigation .islandora-solr-search-simple .form-submit:active
 {
   background-color: #c4413d;
-  background: url('../images/magnifier.png') 0px 0px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#c4413d), to(#8c2726)); /* Saf4+, Chrome */
-  background: url('../images/magnifier.png') 0px 0px no-repeat, -webkit-linear-gradient(top, #c4413d, #8c2726); /* Chrome 10+, Saf5.1+, iOS 5+ */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,    -moz-linear-gradient(top, #c4413d, #8c2726); /* FF3.6 */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,     -ms-linear-gradient(top, #c4413d, #8c2726); /* IE10 */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,      -o-linear-gradient(top, #c4413d, #8c2726); /* Opera 11.10+ */
-  background: url('../images/magnifier.png') 0px 0px no-repeat,         linear-gradient(to bottom, #c4413d, #8c2726);
+  background: url('../images/magnifier-gradient.png') 0px 0px no-repeat #c4413d;
+/*  background: url('../images/magnifier.png') 0px 0px no-repeat, -webkit-gradient(linear, left top, left bottom, from(#c4413d), to(#8c2726));  Saf4+, Chrome 
+  background: url('../images/magnifier.png') 0px 0px no-repeat, -webkit-linear-gradient(top, #c4413d, #8c2726);  Chrome 10+, Saf5.1+, iOS 5+ 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,    -moz-linear-gradient(top, #c4413d, #8c2726);  FF3.6 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,     -ms-linear-gradient(top, #c4413d, #8c2726);  IE10 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,      -o-linear-gradient(top, #c4413d, #8c2726);  Opera 11.10+ 
+  background: url('../images/magnifier.png') 0px 0px no-repeat,         linear-gradient(to bottom, #c4413d, #8c2726);*/
 
 }
 
