--- a/css/grinnell.css
+++ b/css/grinnell.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6
 
 h1
 {
-  
+  line-height: 180%;
 }
 
 h2
@@ -365,6 +365,39 @@ a.grinnell-home
 {
   margin-top: 15px;
 }
+
+
+
+
+/* Tabs */
+
+ul.tabs
+{
+  margin: 0px 0px 0px 0px;
+  padding: 6px 0px 0px 0px;
+}
+
+ul.tabs li
+{
+  line-height: normal;
+}
+
+ul.tabs li a
+{
+  padding: 4px 10px 1px 10px;
+  
+  -webkit-border-radius: 5px 5px 0px 0px; /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
+     -moz-border-radius: 5px 5px 0px 0px; /* FF1-3.6 */
+          border-radius: 5px 5px 0px 0px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
+}
+
+#content-tabs ul.tabs li a:link,
+#content-tabs ul.tabs li a:visited
+{
+  font-size: 100%;
+  line-height: 120%;
+}
+
 
 
 
